This is so bad, but at least it works now.